c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/multi_storage_class_fun.c
/* A function declaration can't have multiple storage class keywords */
static int extern foo(void) {
    return 0;
}

int main(void) {
    return foo();
}